--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    align-items: center;
+    text-align: center;
     color: antiquewhite;
 }
 
@@ -15,4 +15,3 @@ h1 {
     font-weight: 400;
     font-style: normal;
 }
-  
